Update styles and fixed alignment bug

--- a/src/components/notifications/notification-content/offline-progress/offline-progress-notification.css
+++ b/src/components/notifications/notification-content/offline-progress/offline-progress-notification.css
@@ -58,7 +58,7 @@
 .offline-progress-section {
   display: flex;
   flex-direction: column;
-  padding: 10px;
+  padding: 6px;
   border-top: 1px solid rgba(255, 255, 255, 0.15);
 }
 
@@ -67,6 +67,7 @@
   align-items: center;
   width: 100%;
   font-size: 9px;
+  gap: 6px;
 }
 
 .offline-progress-img {
